# opentelemetry-rust-contrib

./: Cargo.toml
opentelemetry-aws-sdk/: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md
opentelemetry-aws-sdk/examples/: basic.rs
opentelemetry-aws-sdk/src/: attributes.rs  config.rs  interceptor.rs  lib.rs
