[package]
name = "opentelemetry-aws-sdk"
version = "0.1.0"
description = "OpenTelemetry instrumentation for AWS SDK for Rust"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-aws-sdk"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "tracing", "aws", "sdk", "observability"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
aws-types = "1.3"
tracing = "0.1"
serde_json = "1.0"

# Optional dependencies for specific services
aws-sdk-s3 = { version = "1.0", optional = true }
aws-sdk-dynamodb = { version = "1.0", optional = true }
aws-sdk-sqs = { version = "1.0", optional = true }
aws-sdk-sns = { version = "1.0", optional = true }
aws-sdk-lambda = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
opentelemetry-stdout = { workspace = true }

[features]
default = []
s3 = ["dep:aws-sdk-s3"]
dynamodb = ["dep:aws-sdk-dynamodb"]
sqs = ["dep:aws-sdk-sqs"]
sns = ["dep:aws-sdk-sns"]
lambda = ["dep:aws-sdk-lambda"]
all-services = ["s3", "dynamodb", "sqs", "sns", "lambda"]

[[example]]
name = "basic"
required-features = ["s3", "dynamodb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]